--- a/src/app/resources/resources-list/resources-list.component.html
+++ b/src/app/resources/resources-list/resources-list.component.html
@@ -8,3 +8,6 @@
 <app-add-component-modal [showBackDrop]="showBackDropCreateComponent" [showModal]="showCreateComponent"
   [resourceTypeId]="resourceId" (close)="onCloseCreateComponentModal()">
 </app-add-component-modal>
+<app-add-document-modal [showBackDrop]="showBackDropCreateDocument" [showModal]="showCreateDocument"
+  [resourceTypeId]="resourceId" (close)="onCloseCreateDocumentModal()">
+</app-add-document-modal>
