--- a/src/app/inventory/inventory-list/inventory-list.component.html
+++ b/src/app/inventory/inventory-list/inventory-list.component.html
@@ -1,3 +1,84 @@
-<app-container>
+<div class="flex flex-col items-center justify-center space-y-4 py-14 sm:w-full">
+  <!-- Client Table Desktop only -->
+  <table *ngIf="((resources$ |async)?.length !== 0) && !(loader$ | async)"
+    class="hidden w-full text-xs text-center table-auto sm:table sm:text-lg">
+    <thead>
+      <tr>
+        <th>Tipo</th>
+        <th>Referencia</th>
+        <th>Código Qr</th>
+        <th>Código del armario</th>
+        <th>Cliente</th>
+        <th>Oficina</th>
+        <th>Tiempo de prestamo</th>
+        <th>Documentos</th>
+      </tr>
+    </thead>
+    <tbody>
+      <ng-container *ngFor="let resource of resources$ |async; let i = index;">
+        <tr [ngClass]="{'bg-gray-200': i % 2 === 0}" class="text-center">
+          <td class="p-2"> {{resource.type}} </td>
+          <td class="p-2"> {{resource.reference}} </td>
+          <td class="p-2"> {{resource.qrCode}} </td>
+          <td class="p-2"> {{resource.lockerPassword}} </td>
+          <td class="p-2"> {{resource.client}} </td>
+          <td class="p-2"> {{resource.office}} </td>
+          <td class="p-2"> {{resource.loanTime}} </td>
+          <td class="flex items-center justify-center p-2 space-x-2">
+            <div class="flex items-center justify-center space-x-2 ">
+              <span class="cursor-pointer focus:outline-none text-brand hover:text-green-900"
+                [routerLink]="['/inventario', resource.id, 'documents']">{{resource.documents?.length}}</span>
+              <!-- <svg [routerLink]="['/clientes', client.id, 'crear-sede']" xmlns="http://www.w3.org/2000/svg"
+                class="w-6 h-6 outline-none cursor-pointer focus:outline-none text-brand hover:text-green-900"
+                fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+              </svg> -->
+            </div>
+          </td>
+        </tr>
+      </ng-container>
 
-</app-container>
+    </tbody>
+  </table>
+  <!-- End Client Table Desktop only -->
+
+  <!-- Mobile Table -->
+  <!-- <div class="flex flex-col h-screen space-y-2 overflow-y-auto sm:hidden"
+    *ngIf="((clients$ |async)?.length !== 0) && !(loader$ | async)">
+
+    <div [ngClass]="{'bg-gray-200': i % 2 === 0}" class="flex flex-col justify-center"
+      *ngFor="let client of clients$ |async; let i = index;">
+      <img class="w-12 mx-auto mb-12" src="{{client.logo}}" alt="">
+      <div><span class="font-bold">Nombre:</span> {{client.name}}</div>
+      <div><span class="font-bold">Nit:</span>{{client.nit}}</div>
+      <div><span class="font-bold">Administrador Mejor en Bici:</span>{{client.meb_admin ? (client.meb_admin?.firstName
+        + ' '+
+        client.meb_admin?.lastName) : 'Sin asignar'}}</div>
+      <div><span class="font-bold">Súper administrador cliente:</span> {{client.super_admin_client ?
+        (client.super_admin_client?.firstName + ' '+
+        client.super_admin_client?.lastName) : 'Sin asignar'}}</div>
+      <div><span class="font-bold">Sedes:</span> {{client.offices?.length}}</div>
+      <div><span class="font-bold">Usuarios:</span> 0</div>
+    </div>
+  </div> -->
+  <!-- End Mobile Table -->
+  <!-- Loader -->
+  <app-loader *ngIf="loader$ |async"></app-loader>
+  <!-- End Loader -->
+  <!-- No Clients -->
+  <div *ngIf="((resources$ |async)?.length === 0) && !(loader$ | async)"
+    class="flex flex-col items-center justify-center w-full h-full space-y-4">
+    <p>Aun no tienes recursos creados</p>
+
+    <button routerLink='nuevo-recurso' class="btn-primary hover:bg-green-900">
+      <span>Crear nuevo recurso</span>
+      <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+          d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+      </svg>
+    </button>
+
+  </div>
+  <!-- End No Clients -->
+</div>
