--- a/src/app/inventory/inventory/inventory.component.html
+++ b/src/app/inventory/inventory/inventory.component.html
@@ -1,6 +1,7 @@
 <!-- Main Container -->
-<div class="flex-col justify-between w-full sm:py-12 h-5/6 sm:px-4">
-  <div class="flex justify-between mt-12 mb-12 sm:m-0">
+<div class="flex-col justify-between w-full sm:py-12 sm:pl-4" id="main-content">
+  <!-- HEADER -->
+  <div class="flex justify-between mt-12 mb-12 sm:m-0 pr-4">
     <!-- Title -->
     <div class="flex items-center space-x-2 sm:space-x-4">
       <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8 sm:w-12 sm:h-12 text-brand" fill="none" viewBox="0 0 24 24"
@@ -21,6 +22,9 @@
     </button>
     <!-- End Add Client Btn -->
   </div>
-  <router-outlet></router-outlet>
+  <!-- BODY -->
+  <div class="h-full overflow-y-scroll">
+    <router-outlet></router-outlet>
+  </div>
 </div>
 <!-- End Main Container -->
