--- a/src/app/inventory/inventory-list/inventory-list.component.html
+++ b/src/app/inventory/inventory-list/inventory-list.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col items-center justify-center space-y-4 py-14 sm:w-full">
-  <!-- Client Table Desktop only -->
+  <!-- Resources Table Desktop only -->
   <table *ngIf="((resources$ |async)?.length !== 0) && !(loader$ | async)"
     class="hidden w-full text-xs text-center table-auto sm:table sm:text-lg">
     <thead>
@@ -28,12 +28,6 @@
             <div class="flex items-center justify-center space-x-2 ">
               <span class="cursor-pointer focus:outline-none text-brand hover:text-green-900"
                 [routerLink]="['/inventario', resource.id, 'documents']">{{resource.documents?.length}}</span>
-              <!-- <svg [routerLink]="['/clientes', client.id, 'crear-sede']" xmlns="http://www.w3.org/2000/svg"
-                class="w-6 h-6 outline-none cursor-pointer focus:outline-none text-brand hover:text-green-900"
-                fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                  d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
-              </svg> -->
             </div>
           </td>
         </tr>
@@ -41,32 +35,29 @@
 
     </tbody>
   </table>
-  <!-- End Client Table Desktop only -->
+  <!-- End Resource Table Desktop only -->
 
   <!-- Mobile Table -->
-  <!-- <div class="flex flex-col h-screen space-y-2 overflow-y-auto sm:hidden"
-    *ngIf="((clients$ |async)?.length !== 0) && !(loader$ | async)">
+  <div class="flex flex-col h-screen space-y-2 overflow-y-auto sm:hidden"
+    *ngIf="((resources$ |async)?.length !== 0) && !(loader$ | async)">
 
     <div [ngClass]="{'bg-gray-200': i % 2 === 0}" class="flex flex-col justify-center"
-      *ngFor="let client of clients$ |async; let i = index;">
-      <img class="w-12 mx-auto mb-12" src="{{client.logo}}" alt="">
-      <div><span class="font-bold">Nombre:</span> {{client.name}}</div>
-      <div><span class="font-bold">Nit:</span>{{client.nit}}</div>
-      <div><span class="font-bold">Administrador Mejor en Bici:</span>{{client.meb_admin ? (client.meb_admin?.firstName
-        + ' '+
-        client.meb_admin?.lastName) : 'Sin asignar'}}</div>
-      <div><span class="font-bold">Súper administrador cliente:</span> {{client.super_admin_client ?
-        (client.super_admin_client?.firstName + ' '+
-        client.super_admin_client?.lastName) : 'Sin asignar'}}</div>
-      <div><span class="font-bold">Sedes:</span> {{client.offices?.length}}</div>
-      <div><span class="font-bold">Usuarios:</span> 0</div>
+      *ngFor="let resource of resources$ |async; let i = index;">
+      <div><span class="font-bold">Tipo:</span> {{resource.type}}</div>
+      <div><span class="font-bold">Referencia:</span>{{resource.reference}}</div>
+      <div><span class="font-bold">Código Qr:</span>{{resource.qrCode}}</div>
+      <div><span class="font-bold">Código del armario:</span>{{resource.lockerPassword}}</div>
+      <div><span class="font-bold">Cliente:</span>{{resource.client}}</div>
+      <div><span class="font-bold">Oficina:</span>{{resource.office}}</div>
+      <div><span class="font-bold">Tiempo de prestamo:</span>{{resource.loanTime}}</div>
+      <div><span class="font-bold">Documentos:</span> {{resource.documents?.length}}</div>
     </div>
-  </div> -->
+  </div>
   <!-- End Mobile Table -->
   <!-- Loader -->
   <app-loader *ngIf="loader$ |async"></app-loader>
   <!-- End Loader -->
-  <!-- No Clients -->
+  <!-- No Resources -->
   <div *ngIf="((resources$ |async)?.length === 0) && !(loader$ | async)"
     class="flex flex-col items-center justify-center w-full h-full space-y-4">
     <p>Aun no tienes recursos creados</p>
@@ -80,5 +71,5 @@
     </button>
 
   </div>
-  <!-- End No Clients -->
+  <!-- End No Resources -->
 </div>
