feat: Update inventory, list and form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   <!-- End Side Navigation -->
 
   <!-- Main Content -->
-  <div class="flex-col w-full">
+  <div class="flex-col main-content">
     <!-- Header Nav -->
     <app-headernav (logOut)="onLogOut()" *ngIf="auth$ | async"></app-headernav>
     <!-- End Header Nav -->
