--- a/src/app/inventory/inventory/inventory.component.html
+++ b/src/app/inventory/inventory/inventory.component.html
@@ -1,7 +1,7 @@
 <!-- Main Container -->
 <div class="flex-col justify-between w-full sm:py-12 sm:pl-4" id="main-content">
   <!-- HEADER -->
-  <div class="flex justify-between mt-12 mb-12 sm:m-0 pr-4">
+  <div class="flex justify-between mt-12 mb-12 sm:m-0 pr-4 sm:mb-4">
     <!-- Title -->
     <div class="flex items-center space-x-2 sm:space-x-4">
       <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8 sm:w-12 sm:h-12 text-brand" fill="none" viewBox="0 0 24 24"
