--- a/src/app/inventory/inventory-list/inventory-list.component.html
+++ b/src/app/inventory/inventory-list/inventory-list.component.html
@@ -1,35 +1,106 @@
 <div class="flex flex-col items-center justify-center space-y-4 py-14 px-4 sm:w-full h-full mt-4">
+
+  <!-- Loader -->
+  <app-loader *ngIf="(loader$ |async)"></app-loader>
+
   <!-- Resources Table Desktop only -->
-  <div class="flow-root h-full w-full">
-    <table *ngIf="((resources$ |async)?.length !== 0) && !(loader$ | async)"
-      class="hidden w-full text-xs text-center table-auto sm:table sm:text-lg overflow-x-scroll overflow-y-scroll">
+  <div class="flow-root h-full w-full" *ngIf="!(loader$ | async)">
+
+    <div class="flex flex-col mb-4 w-11/12 xl:w-10/12 xl:flex-row" *ngIf="((resourcesTypes$ |async)?.length !== 0)">
+
+      <div class="flex flex-col justify-between w-full sm:flex-row">
+        <!-- Resource type -->
+        <div class="flex flex-col w-full my-3 xl:my-0 mx-4">
+          <label class="text-gray-400" for="client-admin">Tipo de recurso:</label>
+          <select [(ngModel)]="resourceTypeId"
+            class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand" name="resource-type"
+            id="resource-type">
+            <option [ngValue]="''">
+              Todos
+            </option>
+            <ng-container *ngFor="let resourceType of resourcesTypes$ | async">
+              <option [ngValue]="resourceType.type">
+                {{resourceType.type}}
+              </option>
+            </ng-container>
+          </select>
+        </div>
+
+        <!-- Client -->
+        <div class="flex flex-col w-full my-3 xl:my-0 mx-4">
+          <label class="text-gray-400" for="client">Cliente:</label>
+          <input name="client" [(ngModel)]="client"
+            class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand" type="text">
+        </div>
+      </div>
+
+      <div class="flex flex-col justify-between w-full sm:flex-row">
+        <!-- office -->
+        <div class="flex flex-col w-full my-3 xl:my-0 mx-4">
+          <label class="text-gray-400" for="office">Sede:</label>
+          <input name="office" [(ngModel)]="office"
+            class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand" type="text">
+        </div>
+
+        <!-- state -->
+        <div class="flex flex-col w-full my-3 xl:my-0 mx-4">
+          <label class="text-gray-400" for="client-admin">Estado:</label>
+          <select [(ngModel)]="state"
+            class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand" name="resource-type"
+            id="resource-type">
+            <option [value]="resourceStatus.Disabled">Desabilitado</option>
+            <option [value]="resourceStatus.Available">Disponible</option>
+            <option [value]="resourceStatus.Checkup">Chequeado</option>
+            <option [value]="resourceStatus.Maintenance">Mantenido</option>
+            <option [value]="resourceStatus.PendingCheckup">Pendiente de chequeo</option>
+            <option [value]="resourceStatus.PendingMaintenance">Pendiente de mantenimiento</option>
+            <option [value]="resourceStatus.PendingRepair">Pendiente de reparación</option>
+            <option [value]="resourceStatus.Repair">Reparado</option>
+            <option [value]="resourceStatus.WaitingApprovalMaintenance">Pendiente de aprovación de mantenimiento
+            </option>
+            <option [value]="resourceStatus.WaitingApprovalRepair">Pendiente de aprovación de reparación</option>
+          </select>
+        </div>
+      </div>
+
+
+      <div class="flex flex-col w-full sm:flex-row items-end justify-center">
+        <button class="btn-primary hover:bg-green-900 h-12" type="submit" (click)="filterResources()">
+          <span class="hidden sm:flex">Filtrar</span>
+        </button>
+      </div>
+
+    </div>
+
+    <table class="hidden w-full text-xs text-center table-auto sm:table sm:text-lg overflow-x-scroll overflow-y-scroll">
       <thead>
         <tr>
           <th>Tipo</th>
           <th>Referencia</th>
           <th>Código Qr</th>
-          <th>Código del armario</th>
+          <th>Clave del recurso</th>
           <th>Cliente</th>
-          <th>Oficina</th>
+          <th>Sede</th>
           <th>Estado</th>
           <th>Documentos</th>
+          <th>Historial de chequeos</th>
         </tr>
       </thead>
       <tbody>
-        <ng-container *ngFor="let resource of resources$ |async; let i = index;">
+        <ng-container *ngFor="let resource of (resources$|async); let i = index;">
           <tr [ngClass]="{'bg-gray-200': i % 2 === 0}" class="text-center">
             <td class="p-2"> {{resource.type}} </td>
             <td class="p-2"> {{resource.reference}} </td>
             <td class="p-2">
               <img [src]="'data:image/jpeg;base64,' + resource.qrCode" alt="Código qr"
-                style="height: 150px; max-width: 150px;" class="mx-auto" />
+                style="height: 50px; max-width: 50px;" class="mx-auto" />
             </td>
             <td class="p-2"> {{resource.lockerPassword}} </td>
             <td class="p-2"> {{resource.client}} </td>
             <td class="p-2"> {{resource.office}} </td>
             <td class="p-2">
               {{
-              resource.status === resourceStatus.available?
+              resource.status === resourceStatus.Available?
               'Disponible'
               :
               ''
@@ -39,11 +110,30 @@
               <span class="cursor-pointer focus:outline-none text-brand hover:text-green-900"
                 [routerLink]="['/inventario', resource.id, 'documents']">{{resource.documents?.length}}</span>
             </td>
+            <td class="p-2">
+              <span class="cursor-pointer focus:outline-none text-brand hover:text-green-900"
+                [routerLink]="['/inventario', resource.id, 'documents']">{{resource.checkups?.length}}</span>
+            </td>
           </tr>
         </ng-container>
 
       </tbody>
     </table>
+
+    <div class="float-right flex-row flex">
+      Pag. {{page}}
+      <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 outline-none focus:outline-none  mx-2" fill="none"
+        viewBox="0 0 24 24" stroke="currentColor"
+        [ngClass]="{'text-brand hover:text-green-900 cursor-pointer': page > 1}"
+        (click)="changePage(page-1, 'previous')">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
+      </svg>
+      <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 outline-none focus:outline-none mx-2"
+        [ngClass]="{'text-brand hover:text-green-900 cursor-pointer': (((resources$ |async)?.length !== 0))}"
+        fill="none" viewBox="0 0 24 24" stroke="currentColor" (click)="changePage(page+1, 'following')">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
+      </svg>
+    </div>
 
   </div>
   <!-- End Resource Table Desktop only -->
@@ -65,7 +155,7 @@
       <div><span class="font-bold">Oficina:</span>{{resource.office}}</div>
       <div><span class="font-bold">Tiempo de prestamo:</span>
         {{
-        resource.status === resourceStatus.available?
+        resource.status === resourceStatus.Available?
         'Disponible'
         :
         ''
@@ -74,11 +164,9 @@
     </div>
   </div>
   <!-- End Mobile Table -->
-  <!-- Loader -->
-  <app-loader *ngIf="loader$ |async"></app-loader>
   <!-- End Loader -->
   <!-- No Resources -->
-  <div *ngIf="((resources$ |async)?.length === 0) && !(loader$ | async)"
+  <!-- <div *ngIf="((resources$ |async)?.length === 0) && !(loader$ | async)"
     class="flex flex-col items-center justify-center w-full h-full space-y-4">
     <p>Aun no tienes recursos creados</p>
 
@@ -90,6 +178,7 @@
       </svg>
     </button>
 
-  </div>
+  </div> -->
   <!-- End No Resources -->
+
 </div>
