--- a/src/app/inventory/inventory-form/inventory-form.component.html
+++ b/src/app/inventory/inventory-form/inventory-form.component.html
@@ -52,9 +52,9 @@
             type="text">
         </div>
 
-        <!-- Office -->
+        <!-- Headquarters -->
         <div class="flex flex-col w-full h-16 my-3 sm:my-0">
-          <label class="text-gray-400" for="office">* Oficina:</label>
+          <label class="text-gray-400" for="office">* Sede:</label>
           <input name="office" formControlName="office" required
             class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand"
             [ngClass]="{'border-solid border-red-500 outline-red-500': resourceForm.get('office')?.touched && resourceForm.get('office')?.hasError('required')}"
