--- a/src/app/components/molecules/check-up-modal/check-up-modal/check-up-modal.component.html
+++ b/src/app/components/molecules/check-up-modal/check-up-modal/check-up-modal.component.html
@@ -19,6 +19,7 @@
           <th></th>
           <th></th>
           <th></th>
+          <th></th>
         </tr>
       </thead>
       <tbody>
@@ -49,6 +50,7 @@
                   d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
               </svg>
             </td>
+            <td>{{component.comment}}</td>
           </tr>
         </ng-container>
       </tbody>
