--- a/src/app/repair/repair-pending/repair-pending.component.html
+++ b/src/app/repair/repair-pending/repair-pending.component.html
@@ -44,7 +44,7 @@
               <!-- ultimo chequeo -->
               <td class="p-2 justify-center flex">
                 <button class="btn-primary hover:bg-green-900" *ngIf="resource.checkups.length"
-                  (click)="openLastCheckup(resource.checkups[resource.checkups.length-2], resource.id)">
+                  (click)="openLastCheckup(resource.checkups[resource.checkups.length-1], resource.id)">
                   <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24"
                     stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -56,8 +56,14 @@
               <!-- Acciones -->
               <td class="justify-center flex p2">
                 <button class="btn-primary hover:bg-green-900"
-                  (click)="openUpdateCheckup(resource.checkups[resource.checkups.length-1], resource.id)">
+                  (click)="openStartCheckup(resource.repairs[resource.repairs.length-1], resource.id)"
+                  *ngIf="resource.repairs[resource.repairs.length-1]?.status === 'pending'">
                   Iniciar reparación
+                </button>
+                <button class="btn-primary hover:bg-green-900"
+                  (click)="openFinishModal(resource.repairs[resource.repairs.length-1], resource.id)"
+                  *ngIf="resource.repairs[resource.repairs.length-1]?.status === 'in_progress'">
+                  Finalizar reparación
                 </button>
               </td>
             </tr>
@@ -120,5 +126,13 @@
 </app-check-up-modal>
 
 <app-confirm-modal [showBackDrop]="showBackDrop" [showModal]="showModal"
+  question="¿Está seguro que quiere iniciar la reparación del recurso?" header="Confirmar"
+  (close)="onCloseModal($event)"></app-confirm-modal>
+
+<!-- <app-confirm-modal [showBackDrop]="showBackDrop" [showModal]="showModal"
   question="¿Está seguro que quiere finalizar la reparación del recurso?" header="Confirmar"
-  (close)="onCloseMaintenanceModal($event)"></app-confirm-modal>
+  (close)="onCloseModal($event)"></app-confirm-modal> -->
+
+<app-component-commentary-modal [showBackDrop]="showBackDropF" [showModal]="showModalF" [checkup]="checkup"
+  *ngIf="showBackDropF" (close)="onCloseFinishModal($event)">
+</app-component-commentary-modal>
