--- a/src/app/approvals/approvals/approvals.component.html
+++ b/src/app/approvals/approvals/approvals.component.html
@@ -21,7 +21,18 @@
             d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
         </svg>
         <span>
-          Pendientes
+          Pendientes mantenimiento
+        </span>
+      </a>
+      <a class="hover:underline hover:text-brand flex-row flex mr-4" routerLink="/aprovaciones/repair"
+        [ngClass]="{'underline text-brand': route.url=== '/aprovaciones/repair'}">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-1" fill="none" viewBox="0 0 24 24"
+          stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+        </svg>
+        <span>
+          Pendientes reparación
         </span>
       </a>
       <a class="hover:underline hover:text-brand flex-row flex" routerLink="/aprovaciones/historial"
