--- a/src/app/components/molecules/table/table/table.component.html
+++ b/src/app/components/molecules/table/table/table.component.html
@@ -11,7 +11,7 @@
         <td class="p-2" *ngFor="let column of columns">
           <span [ngSwitch]="column.type">
             <!-- Text -->
-            <span *ngSwitchCase="columnTypes.text">{{item[column.name]}}</span>
+            <span *ngSwitchCase="columnTypes.text">{{item[column.name] !== undefined? item[column.name]:'No aplica'}}</span>
             <!-- Boolean -->
             <span *ngSwitchCase="columnTypes.boolean">{{item[column.name]? 'Si' : 'No'}}</span>
             <!-- Image -->
